# JiggyMusicBot

./: .gitignore  Dockerfile  Hey-Jiggy-Bot_en_windows_v3_0_0.ppn  PRIVACY.MD  README.md  TERMS.md  keep_alive.py  main.py  package-lock.json  package.json  pyproject.toml  render.yaml  requirements.txt  tsconfig.json  yt-dlp.conf
bot/: __init__.py  bot.py  config.py  main.py  music.py  utils.py  views.py
bot/cogs/: play.py  queue.py  skip.py  stop.py
bot/commands/: __init__.py  admin_commands.py  music_commands.py
bot/utils/: audio.py  config.py  youtube.py
bot/views/: __init__.py  pagination_view.py  video_selection_view.py
cookies/: cookies.txt
src/: bot.ts  config.ts  env.d.ts  index.ts
src/commands/: adminCommands.ts  musicCommands.ts  play.ts  playCommand.ts  queue.ts  queueCommand.ts  registerCommands.ts  repeatCommand.ts  skip.ts  skipCommand.ts  stop.ts  stopCommand.ts  uploadPlay.ts  uploadPlayCommand.ts
src/utils/: audio.ts  audioPlayer.ts  config.ts  speechRecognition.ts  youtube.ts
src/views/: QueuePaginationView.ts  VideoSelectionView.ts
