[tool.poetry]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.10.0,<3.12"
discord-py = "2.4.0"
youtube-dl = "2021.12.17"
ffmpeg-python = "0.2.0"
flask = "^3.0.3"
python-dotenv = "^1.0.1"
pynacl = "^1.4.0"
yt-dlp = "^2024.8.6"
requests = "^2.32.3"
yt-dlp-youtube-oauth2 = {url = "https://github.com/coletdjnz/yt-dlp-youtube-oauth2/archive/refs/heads/master.zip"}

[tool.pyright]
# https://github.com/microsoft/pyright/blob/main/docs/configuration.md
useLibraryCodeForTypes = true
exclude = [".cache"]

[tool.ruff]
# https://beta.ruff.rs/docs/configuration/
select = ['E', 'W', 'F', 'I', 'B', 'C4', 'ARG', 'SIM']
ignore = ['W291', 'W292', 'W293']

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"