[tool.poetry]
name = "jiggy_music_bot"
version = "0.1.0"
description = "A Discord music bot that plays music from YouTube using yt-dlp and YouTube API."
authors = ["Jeremiah Jacobson <jaco8060>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
discord-py = "^2.4.0" # Use the appropriate version based on your code compatibility
yt-dlp = "^2025.01.26"
requests = "^2.32.3"
python-dotenv = "^1.0.0"
pynacl = "^1.5.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
